# cmake-supports

./: .gitignore  CMakeSupportPrologueConfig.cmake  CMakeSupportsConfig.cmake  CMakeSupportsConfigVersion.cmake  CxxToolsetSuffixConfig.cmake  FindCypherGuardClientSDK.cmake  FindFDTK.cmake  FindLibDMMB.cmake  FindLibDRMWrapper.cmake  FindLibEPUB.cmake  FindLibHyperBook.cmake  FindLibHyperBookDMMB.cmake  FindMiniZip.cmake  JPEGConfig.cmake  LICENSE  LibXml2Config.cmake  PkgConfigUtil.cmake  README.md
Installed/DotPCFiles/: README
Installed/Modules/: README
Modules/: FindCygwin.cmake  FindCypherGuardClientSDK.cmake  FindJPEG.cmake  FindLibSquish.cmake  FindLibXml2.cmake  FindLibreSSL.cmake  FindSQLite3.cmake  README
Modules/Installed/: README
Private/: Compiler.cmake  Configuration.cmake  DefaultLibraryPackage.pc.in  DefaultModule.cmake.in  DefaultPackage.cmake.in  Executable.cmake  Library.cmake  ModuleBuilder.cmake  ModuleFinder.cmake  Package.cmake  PackageArgumentParser.cmake  PackageArgumentParserVersion.cmake  PackageTools.cmake  PrecompiledHeader.cpp.in  PrecompiledHeaderCxx.cmake  Scope.cmake  SetToolsetSuffixCxx.cmake  SourceFilePropertyMap.cmake  SourceGroupMap.cmake  Target.cmake
Private/Compilers/: GNUCompatible.cmake  MSVC.cmake  Unknown.cmake
Private/Scopes/: CustomTarget.cmake  EmbeddedPackage.cmake  Executable.cmake  Interface.cmake  InterfaceLibrary.cmake  LibraryC.cmake  LibraryCxx.cmake  (+2 more)
Tests/: CMakeLists.txt  ConfigureAndBuild.cmake
Tests/Libraries/OurLegacyModule/share/cmake/OurLegacyModule/: OurLegacyModuleConfig.cmake
Tests/Libraries/OurSubModule/share/cmake/OurSubModule/: OurSubModuleConfig.cmake
Tests/Modules/: FindOurExternalLib.cmake  FindOurSubModule.cmake
Tests/Projects/: CMakeLists.txt
Tests/Projects/emit-module-without-target/: CMakeLists.txt
Tests/Projects/get-module-variable/: CMakeLists.txt
Tests/Projects/import-package-with-components/: CMakeLists.txt  main_calling_a.c  main_calling_b.c  main_calling_both.c
Tests/Projects/require-components/: CMakeLists.txt
Tests/Projects/require-components/our-executable/: CMakeLists.txt  main.c
Tests/Projects/require-components/our-sub-module/: CMakeLists.txt  mine.c  ours.c
Tests/Projects/use-embedded-package/: CMakeLists.txt  main.c
Tests/Projects/use-embedded-package/our-sub-module/: CMakeLists.txt
Tests/Projects/use-legacy-package/: CMakeLists.txt
Tests/Scenarios/: CMakeLists.txt  EmitModuleWithoutTarget.cmake  GetModuleVariable.cmake  ImportPackageWithComponents.cmake  RequireComponents.cmake  UseEmbeddedPackage.cmake  UseLegacyPackage.cmake
(+4 files in other folders)
